[package]
name = "home_budget"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = "1.0.147"
